fixed align of some elements

--- a/shift-viewer-v.1.0/src/App.css
+++ b/shift-viewer-v.1.0/src/App.css
@@ -3,6 +3,17 @@
   font-family: Trebuchet;
   text-align: center;
 }
+.App-container  {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.App {
+  width: 70%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 * {
   font-family: Trebuchet;
 }
